# Nokia_Bell_Labs-MIT_Manipal-ROS_Mapping_Platform

./: LICENSE  README.md  TODOList.txt
Final Project/: README.md
Final Project/Final Project Code/UnityRosHusky/src/Mobile-Robot-Navigation-and-Mapping/mobile_robot_navigation_project/: CMakeLists.txt  package.xml
Final Project/Final Project Code/UnityRosHusky/src/Mobile-Robot-Navigation-and-Mapping/mobile_robot_navigation_project/config/: config.rviz  config2.rviz  config3.rviz  costmap_common.yaml  mapper_params_online_sync.yaml  params.yaml
Final Project/Final Project Code/UnityRosHusky/src/Mobile-Robot-Navigation-and-Mapping/mobile_robot_navigation_project/launch/: amcl.launch  autonomous_exploration.launch  bug0.launch  exploration.launch  gmapping.launch  map_builder.launch  mapbased_nav.launch  mapless_nav.launch  move_base.launch  move_base2.launch  navigation.launch  slam_toolbox.launch
Final Project/Final Project Code/UnityRosHusky/src/Mobile-Robot-Navigation-and-Mapping/mobile_robot_navigation_project/map/: map.pgm  map.yaml
Final Project/Final Project Code/UnityRosHusky/src/Mobile-Robot-Navigation-and-Mapping/mobile_robot_navigation_project/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
Final Project/Final Project Code/UnityRosHusky/src/Mobile-Robot-Navigation-and-Mapping/mobile_robot_navigation_project/scripts/: bug0.py  go_to_point_service.py  laser_transform.py  odometry_publisher.py  reading_laser.py  server_endpoint.py  wall_follow.py  wall_follow_service.py
Implemention/ROS#turtlebot/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  ROS# turtlebot.sln  Unity.CollabProxy.Editor.csproj  Unity.PlasticSCM.Editor.csproj  Unity.Rider.Editor.csproj  Unity.Sysroot.Linux_x86_64.csproj  Unity.SysrootPackage.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.Timeline.csproj  (+9 more)
(+111 files in other folders)
